manifests/wizsuite-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: wizsuite-prod
  name: wizsuite-prod
