manifests/wizsuite-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: wiz-webapi
  name: wiz-webapi
  namespace: wizsuite-prod
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: wiz-webapi
  type: ClusterIP
status:
  loadBalancer: {}
